Fix flickering on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -380,8 +380,7 @@ div.section p {
     bottom: -25vw;
     left: 50%;
     transform: translateX(-50%);
-    -webkit-transform-style: preserve-3d;
-    -webkit-backface-visibility: hidden;
+    -webkit-transform: translate3d(0,0,0);
     width: 30vw;
     height: 30vw;
     clip: rect(0vw,30vw,5vw,0vw);
@@ -394,8 +393,7 @@ div.section p {
     width: 100%;
     height: 100%;
     display: block;
-    -webkit-transform-style: preserve-3d;
-    -webkit-backface-visibility: hidden;
+    -webkit-transform: translate3d(0,0,0);
     background-image: linear-gradient(90deg, #F800FF 0%, #3100FF 100%);
     border-radius: 50%;
     transition: all .3s ease-in-out;
